# SiftOut

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
siftout/: __init__.py  cli.py  hardware.py
testings/: test_secret.py  try.py
tests/: conftest.py  test_siftout.py
