[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────────────────────────────────────────
[project]
name            = "siftout"
version         = "1.1.0"
description     = "Smart, automated workspace cleaner and security hardener for Python projects."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
keywords        = [
    "cleaner", "cleanup", "workspace", "security", "secrets",
    "environment", "dotenv", "devtools", "automation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
    "Topic :: Utilities",
]

authors = [
    { name = "Abhishek Srivatsasa Guntur", email = "gabhisheksrivatsasa@gmail.com" },
    { name = "Devansh Singh",              email = "devansh.jay.singh@gmail.com"   },
]

maintainers = [
    { name = "Abhishek Srivatsasa Guntur", email = "gabhisheksrivatsasa@gmail.com" },
    { name = "Devansh Singh",              email = "devansh.jay.singh@gmail.com"   },
]

# No mandatory runtime dependencies — pure stdlib
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage      = "https://github.com/Abhishek-Srivatsasa/SiftOut"
Documentation = "https://github.com/Abhishek-Srivatsasa/SiftOut#readme"
Repository    = "https://github.com/Abhishek-Srivatsasa/SiftOut"
"Bug Tracker" = "https://github.com/Abhishek-Srivatsasa/SiftOut/issues"

[project.scripts]
siftout = "siftout.cli:main"

# ─────────────────────────────────────────────────────────────────────────────
# Tool: setuptools
# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]

# ─────────────────────────────────────────────────────────────────────────────
# Tool: pytest
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
log_cli      = false
log_level    = "WARNING"

# ─────────────────────────────────────────────────────────────────────────────
# Tool: coverage
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["siftout"]
omit     = ["tests/*", "testings/*", "setup.py"]

[tool.coverage.report]
show_missing   = true
skip_covered   = false
fail_under     = 85

# ─────────────────────────────────────────────────────────────────────────────
# Tool: ruff (linter + formatter)
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length    = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
]
ignore = ["B904"]

[tool.ruff.lint.isort]
known-first-party = ["siftout"]

# ─────────────────────────────────────────────────────────────────────────────
# Tool: mypy
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.9"
strict                 = true
ignore_missing_imports = true
